--- a/shipping.service
+++ b/shipping.service
@@ -3,7 +3,7 @@ Description=Shipping Service
 
 [Service]
 User=roboshop
-Environment=CART_ENDPOINT=cart.padmasrikanth.tech:8080
+Environment=CART_ENDPOINT=cart.app.padmasrikanth.tech:8080
 Environment=DB_HOST=mysql.padmasrikanth.tech
 ExecStart=/bin/java -jar /app/shipping.jar
 SyslogIdentifier=shipping
