--- a/payment.service
+++ b/payment.service
@@ -4,10 +4,10 @@ Description=Payment Service
 [Service]
 User=root
 WorkingDirectory=/app
-Environment=CART_HOST=cart.padmasrikanth.tech
-Environment=CART_PORT=8080
-Environment=USER_HOST=user.padmasrikanth.tech
-Environment=USER_PORT=8080
+Environment=CART_HOST=cart.app.padmasrikanth.tech
+Environment=CART_PORT=80
+Environment=USER_HOST=user.app.padmasrikanth.tech
+Environment=USER_PORT=80
 Environment=AMQP_HOST=rabbitmq.padmasrikanth.tech
 Environment=AMQP_USER=roboshop
 Environment=AMQP_PASS=roboshop123
